--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,7 +8,11 @@
         <link rel="preconnect" href="https://primefaces.org" />
         <link rel="icon" type="image/x-icon" href="favicon.png" />
         <link href="https://fonts.cdnfonts.com/css/lato" rel="stylesheet" />
-        <script type="text/javascript" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+        <script
+            type="text/javascript"
+            async
+            src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
+        ></script>
     </head>
     <body>
         <app-root></app-root>
